--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@ range(1, 6).map(n -> '{0}! = {1}'.format(n, factorial(n))) \
 <ul>
     <li># Class</li>
   </ul>
-  <pre class="prettyprint"><code>class Account {
+  <pre class="prettyprint"><code>class AccountException(Traceable) {
+    def init(message) {
+        this.super(Traceable, 'init', message)
+    }
+}
+      
+    class Account {
     # it's a field
     balance = 0 
 
@@ -103,7 +109,7 @@ range(1, 6).map(n -> '{0}! = {1}'.format(n, factorial(n))) \
 
     def deposit(amount) {
         if amount &lt;= 0 {
-            throw new Traceable('must be positive')
+            throw new AccountException('must be positive')
         }
 
         this.balance = this.balance + amount
