--- a/index.html
+++ b/index.html
@@ -394,7 +394,13 @@ println(C.parents())
 
 new C().pa()
 new C().pb()
-new C().c()</code></pre>
+new C().c()
+
+Orz = new Class('Orz', list(PA, PB), list(toString))
+orz = new Orz()
+orz.pa()
+orz.pb()
+println(orz)</code></pre>
 <hr>
 <center><a href="https://openhome.cc">openhome.cc</a></center>
     <script type="module">
