--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ println('obj.z is ' + obj.z)</code></pre>
 <ul>
     <li># Lambda expression</li>
   </ul>
-  <pre class="prettyprint"><code>list(1, 2, 3, 4, 5).filter(elem -> elem >= 2) \
-                   .map(elem -> elem * 100)   \
-                   .forEach(println)
+  <pre class="prettyprint"><code>[1, 2, 3, 4, 5].filter(elem -> elem >= 2) \
+               .map(elem -> elem * 100)   \
+               .forEach(println)
 
 range(1, 10) \
   .map(n -> range(2, 10).map(i -> '{0}*{1}={2}'.format(i, n, i * n)).join('\t')) \
@@ -366,7 +366,7 @@ def foo(p) {
 }
 
 # The 2nd parameter of the apply method accepts a List instance. 
-println(foo.apply(o, list(40)))</code></pre>
+println(foo.apply(o, [40]))</code></pre>
 <ul>
     <li># meta programming 2</li>
   </ul>
@@ -389,7 +389,7 @@ class C {
 }
 
 println(C.parents())
-C.parents(list(PA, PB))
+C.parents([PA, PB])
 println(C.parents())
 
 new C().pa()
@@ -400,7 +400,7 @@ def toString() {
     return this.class().name()
 }
 
-Orz = new Class('Orz', list(PA, PB), list(toString))
+Orz = new Class('Orz', [PA, PB], [toString])
 orz = new Orz()
 orz.pa()
 orz.pb()
