--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ println(format('Hello {0}', 'World'))</textarea> <br>
     i = 2
     while i < 10 {
         printf('{0}*{1}={2}\t', i, n, i * n)
-        i = i + 1 
+        i += 1 
     }
     println()
 }
@@ -112,7 +112,7 @@ class Account {
             throw new AccountException('must be positive')
         }
 
-        this.balance = this.balance + amount
+        this.balance += amount
     }
 
     def toString() {
