--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ range(1, 6).map(n -> '{0}! = {1}'.format(n, factorial(n))) \
                 flags.swap(b, w)
                 w += 1
                 b += 1
-            case 'R'
+            default  
                 flags.swap(r, w)
                 r -= 1
         }
