--- a/index.html
+++ b/index.html
@@ -165,11 +165,7 @@ catch e {
     <li># Built-in Classes</li>
   </ul>
   <pre class="prettyprint"><code>def sum(lt) {
-    if lt.isEmpty() {
-        return 0
-    }
- 
-    return lt.get(0) + sum(lt.slice(1))
+    return 0 if lt.isEmpty() else (lt.get(0) + sum(lt.slice(1)))
 }
  
 lt = range(1, 11)
@@ -240,7 +236,10 @@ println(getX())</code></pre>
 <ul>
     <li># Lambda expression</li>
   </ul>
-  <pre class="prettyprint"><code>[1, 2, 3, 4, 5].filter(elem -> elem >= 2) \
+  <pre class="prettyprint"><code>max = (n1, n2) -> n1 if n1 > n2  else n2
+println(max(10, 20))
+
+[1, 2, 3, 4, 5].filter(elem -> elem >= 2) \
                .map(elem -> elem * 100)   \
                .forEach(println)
 
