--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ catch e {
 lt = range(1, 11)
 println('{0}={1}'.format(lt.join('+'), sum(lt)))
 
-println(new String('aBc').toUpperCase())
-println(new String('aBc').toLowerCase())</code></pre>
+println((new String('aBc')).toUpperCase())
+println((new String('aBc')).toLowerCase())</code></pre>
 <ul>
     <li># Closure</li>
   </ul>
@@ -447,9 +447,9 @@ println(C.parents())
 C.parents([PA, PB])
 println(C.parents())
 
-new C().pa()
-new C().pb()
-new C().c()
+(new C()).pa()
+(new C()).pb()
+(new C()).c()
 
 def toString() {
     return this.class().name()
