--- a/index.html
+++ b/index.html
@@ -122,13 +122,7 @@ println(adjust(flags))</code></pre>
 <ul>
     <li># Class</li>
   </ul>
-  <pre class="prettyprint"><code>class AccountException(Traceable) {
-    def init() {
-        this.super(Traceable, 'init', arguments)
-    }
-}
-      
-class Account {
+  <pre class="prettyprint"><code>class Account {
     # it's a field
     balance = 0 
 
@@ -139,7 +133,7 @@ class Account {
 
     def deposit(amount) {
         if amount <= 0 {
-            throw new AccountException('must be positive')
+            throw new Exception('must be positive')
         }
 
         this.balance += amount
