--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ println(orz)</code></pre>
         }
     };
 
-    const STD_MODUEL_PATH = '/js/toy_lang/lib';
+    const STD_MODUEL_PATH = './js/toy_lang/lib';
 
     const moduleLoaders = [];
     fetch(`${STD_MODUEL_PATH}/exception.toy`)
