--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@ println(orz)</code></pre>
         }
     };
 
-    const STD_MODUEL_PATH = './js/toy_lang/lib';
+    const STD_MODULE_PATH = './js/toy_lang/lib';
 
     const moduleLoaders = [];
-    fetch(`${STD_MODUEL_PATH}/exception.toy`)
+    fetch(`${STD_MODULE_PATH}/exception.toy`)
         .then(resp => resp.text())
         .then(code => new ModuleLoader(new Toy(ENVIRONMENT, 'exception.toy', code), true))
         .then(moduleLoader => moduleLoaders.push(moduleLoader));
