--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ println(orz)</code></pre>
 <hr>
 <center><a href="https://openhome.cc">openhome.cc</a></center>
     <script type="module">
-    import {TModule, ModuleImporter} from './toy_lang/js/toy.js';
+    import {TModule, ModuleImporter} from './toy_lang/js/tmodule.js';
 
     const ENVIRONMENT = {
         output(value) {
