--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ println(orz)</code></pre>
         <a href="https://openhome.cc">openhome.cc</a>
     </center>
     <script type="module">
-        import { TModule, ModuleImporter } from './toy_lang/js/tmodule.js';
+        import { TModule, ModuleImporter } from './toy_lang/js/module.js';
 
         const ENVIRONMENT = {
             output(value) {
