remove STD_MODULE_PATH

--- a/index.html
+++ b/index.html
@@ -484,13 +484,12 @@ println(orz)</code></pre>
                         });
         }
         
-        const STD_MODULE_PATH = 'toy_lang/lib';
+        const TOY_MODUEL_PATH = 'toy_lang/examples';
 
         const ENVIRONMENT = {
             output(value) {
                 tty.textContent += value;
             },
-            STD_MODULE_PATH,
             readModule
         };
 
